# facebook-group-scraper

./: .dockerignore  .gitignore  Dockerfile  README.md  credentials.txt  custom_utils.py  docker-compose.yml  extract_data.py  extract_notebook.ipynb  main.py  nayar_scraper.py  pyproject.toml  requirements.txt  run.sh
facebook_scraping_selenium/: extractor.py  scraper.py
notebook/: facebook-scraping-selenium.ipynb
tests/: test_valid_tags.py
utils/: tag_config.py
